package java101.Java50_UniversityDiagram.classes;

public class Employee {
    private String name;
    private String position;
}
