package java101.Java50_UniversityDiagram.classes;

public class Officer extends Employee{
}
