package java101.Java50_UniversityDiagram.classes;

import java.util.List;

public class University {
    private List<Classroom> classrooms;
    private List<Department> departments;
    private List<Employee> employees;
}
